add login logout signup

--- a/proj_3/templates/login.html
+++ b/proj_3/templates/login.html
@@ -5,6 +5,27 @@
 		<title></title>
 	</head>
 	<body>
-		<h2>Log in</h2>
+		<h2>Login</h2>
+				
+		<form method="post">
+			<table>
+			<tr>
+				<td>Username</div>
+				<td><input type="text" name="username" value="{{username}}"></td>
+				<td style="color:red;">{{error_username}}</td>
+			</tr>
+		
+			<tr>
+				<td>Password</td>
+				<td><input type="text" name="password" value=""></td>
+				<td>{{error_password}}</td>
+			</tr>
+			
+			</table>
+		
+			<br>
+			<input type="submit">
+		
+		</form>
 	</body>
 </html>
