add user login password check

--- a/proj_3/templates/login.html
+++ b/proj_3/templates/login.html
@@ -25,6 +25,10 @@
 		
 			<br>
 			<input type="submit">
+			
+			<br><br>
+			{{error_user_exist}}
+			{{error_password_wrong}}
 		
 		</form>
 	</body>
