--- a/proj_3/templates/blogPost.html
+++ b/proj_3/templates/blogPost.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %}
+{% extends "blogBase.html" %}
 
 {% block content %}
 
-	<h2>{{blog.title}}</h2>
+	<h3>{{blog.title}}</h3>
 	<div>{{blog.created.strftime("%b %d, %Y")}}</div>
 	<hr>
 	<br>
