--- a/proj_3/templates/newpost.html
+++ b/proj_3/templates/newpost.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends "blogBase.html" %}
 
 {% block content %}
-	<h2>New Post</h2>
+	<h3>New Post</h3>
 	
 	<form method="post">
 	
