--- a/proj_3/templates/login.html
+++ b/proj_3/templates/login.html
@@ -1,35 +1,32 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title></title>
-	</head>
-	<body>
-		<h2>Login</h2>
-				
-		<form method="post">
-			<table>
-			<tr>
-				<td>Username</div>
-				<td><input type="text" name="username" value="{{username}}"></td>
-				<td style="color:red;">{{error_username}}</td>
-			</tr>
+{% extends "base.html" %}
+
+{% block userAccount %}
+<h2>Login</h2>
 		
-			<tr>
-				<td>Password</td>
-				<td><input type="text" name="password" value=""></td>
-				<td>{{error_password}}</td>
-			</tr>
-			
-			</table>
-		
-			<br>
-			<input type="submit">
-			
-			<br><br>
-			{{error_user_exist}}
-			{{error_password_wrong}}
-		
-		</form>
-	</body>
-</html>
+<form method="post">
+	<table>
+	<tr>
+		<td>Username</div>
+		<td><input type="text" name="username" value="{{username}}"></td>
+		<td style="color:red;">{{error_username}}</td>
+	</tr>
+
+	<tr>
+		<td>Password</td>
+		<td><input type="text" name="password" value=""></td>
+		<td>{{error_password}}</td>
+	</tr>
+	
+	</table>
+
+	<br>
+	<input type="submit">
+	
+	<br><br>
+	{{error_user_exist}}
+	{{error_password_wrong}}
+
+</form>
+	
+
+{% endblock %}
