--- a/proj_3/templates/signup.html
+++ b/proj_3/templates/signup.html
@@ -1,44 +1,37 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Sign up</title>
-	</head>
+{% extends "base.html" %}
+
+{% block userAccount %}
+<h2>Signup</h2>
+		
+<form method="post">
+	<table>
+	<tr>
+		<td>Username</div>
+		<td><input type="text" name="username" value="{{username}}"></td>
+		<td style="color:red;">{{error_username}}</td>
+	</tr>
+
+	<tr>
+		<td>Password</td>
+		<td><input type="text" name="password" value=""></td>
+		<td>{{error_password}}</td>
+	</tr>
 	
-	<body>
+	<tr>
+		<td>Verify Password</td>
+		<td><input type="text" name="verify" value=""></td>
+		<td>{{error_verify}}</td>
+	</tr>
 	
-		<h2>Signup</h2>
-				
-		<form method="post">
-			<table>
-			<tr>
-				<td>Username</div>
-				<td><input type="text" name="username" value="{{username}}"></td>
-				<td style="color:red;">{{error_username}}</td>
-			</tr>
-		
-			<tr>
-				<td>Password</td>
-				<td><input type="text" name="password" value=""></td>
-				<td>{{error_password}}</td>
-			</tr>
-			
-			<tr>
-				<td>Verify Password</td>
-				<td><input type="text" name="verify" value=""></td>
-				<td>{{error_verify}}</td>
-			</tr>
-			
-			<tr>
-				<td>Email(optional)</td>
-				<td><input type="text" name="email" value="{{email}}"></td>
-				<td>{{error_email}}</td>
-			</tr>
-			</table>
-		
-			<br>
-			<input type="submit">
-		
-		</form>
-	</body>
-</html>
+	<tr>
+		<td>Email(optional)</td>
+		<td><input type="text" name="email" value="{{email}}"></td>
+		<td>{{error_email}}</td>
+	</tr>
+	</table>
+
+	<br>
+	<input type="submit">
+
+</form>
+{% endblock %}
