--- a/proj_3/templates/welcome.html
+++ b/proj_3/templates/welcome.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title></title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block userAccount %}
 	<h2>Welcome, {{username}}.</h2>
-</body>
-</html>
+{% endblock %}
