--- a/proj_5/templates/header.html
+++ b/proj_5/templates/header.html
@@ -5,7 +5,11 @@
 		</a>
 	</div>
 	<div class="col-md-6 text-right">
-					<p>Login Link will go Here </p>
-		
+    {% if username == None %}
+      <a href="{{url_for('showLogin')}}">Login</a>
+    {% else %}
+    <a href="{{url_for('gdisconnect')}}">Logout</a>
+      <div>{{username}}</div>
+    {% endif %}
 	</div>
 </div>
