--- a/proj_5/templates/login.html
+++ b/proj_5/templates/login.html
@@ -1,11 +1,9 @@
-<html>
+{% extends "main.html" %}
+{% block content %}
+{% include "header.html" %}
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+<script src="//apis.google.com/js/platform.js?onload=start"></script>
 
-<head>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-  <script src="//apis.google.com/js/platform.js?onload=start"></script>
-</head>
-
-<body>
 <div id="signinButton">
   <span class="g-signin"
     data-scope="openid email"
@@ -47,6 +45,4 @@ function signInCallback(authResult) {
   }
 }
 </script>
-</body>
-
-</html>
+{% endblock %}
