--- a/proj_5/templates/categories.html
+++ b/proj_5/templates/categories.html
@@ -3,8 +3,7 @@
 {% include "header.html" %}
 	<div class="row top-menu">
 		<div class="col-md-10"></div>
-		<div class="col-md-2 text-right">
-					</div>
+		<div class="col-md-2 text-right"></div>
 	</div>
 	<div class="row divider blue">
 		<div class="col-md-12"></div>
@@ -17,19 +16,16 @@
 	</div>
 
 <div class = 'flash'>
-		      {% with messages = get_flashed_messages() %}
-      {% if messages %}
-          
-        <ul>
-        {% for message in messages %}
-            <li> <strong> {{ message }} </strong> </li>
-        {% endfor %}
-        </ul>
+	{% with messages = get_flashed_messages() %}
+		{% if messages %}
+			<ul>
+        	{% for message in messages %}
+            	<li> <strong> {{ message }} </strong> </li>
+        	{% endfor %}
+        	</ul>
         {% endif %}
     {% endwith %}
-
 </div>
-	
 	<div class="row padding-top padding-bottom">
 		<div class="col-md-1"></div>
 		<div class="col-md-10 padding-none">
@@ -52,4 +48,5 @@
 			</div>
 		</a>
 	{% endfor %}
+</div>
 {% endblock %}
