--- a/proj_5/templates/newitem.html
+++ b/proj_5/templates/newitem.html
@@ -22,7 +22,11 @@
 				<label for="description">Description:</label>
 				<textarea class="form-control" maxlength="250" rows="3" name="description" placeholder="Description of the item"></textarea>
 
-        		<br>
+        <br>
+        {% if error_messages %}
+          <div style='color:red;'>{{error_messages}}</div>
+          <br>
+        {% endif %}
 
 				<button type="submit" class="btn btn-default" id="submit" type="submit">
 				<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Create</button>
