change id to name in url

--- a/proj_5/templates/deleteitem.html
+++ b/proj_5/templates/deleteitem.html
@@ -8,7 +8,7 @@
 	<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete</button>
 </form>
 
-<a href = '{{url_for('showCategory', category_id = category_id)}}'>
+<a href = '{{url_for('showCatalog', catalog_name = catalog_name)}}'>
 	<button class="btn btn-default delete col-md-2">
 	<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
 </a>
