--- a/proj_5/templates/edititem.html
+++ b/proj_5/templates/edititem.html
@@ -23,7 +23,7 @@
 					<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Save</button>
 				</div>
 			</form>
-			<a href = '{{url_for('showCategory', category_id = category_id)}}'>
+			<a href = '{{url_for('showCatalog', catalog_name = catalog_name)}}'>
 				<button class="btn btn-default delete">
 				<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
 			</a>
