--- a/proj_5/templates/catalog.html
+++ b/proj_5/templates/catalog.html
@@ -8,10 +8,10 @@
 
 <div class="row banner menu">
 	<div class="col-md-11 col-md-offset-1 padding-none">
-		<h1>{{ category.name }}
+		<h1>{{ catalog.name }}
 		<figure class="creator">
 			<img src="{{ url_for('static', filename='blank_user.gif') }}">
-			<figcaption>Category creator's name goes here</figcaption>
+			<figcaption>Catalog creator's name goes here</figcaption>
 		</figure>
 		</h1>
 	</div>
@@ -33,19 +33,19 @@
 	<div class="row padding-top padding-bottom">
 		<div class="col-md-1"></div>
 		<div class="col-md-11 padding-none">
-			<a href="{{url_for('editCategory', category_id = category.id )}}">
+			<a href="{{url_for('editCatalog', catalog_name = catalog.name)}}">
 				<button class="btn btn-default" id="new-menu-item">
-					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit Category
+					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit Catalog
 				</button>
 			</a>
-			<a href="{{url_for('newItem', category_id = category.id )}}">
+			<a href="{{url_for('newItem', catalog_name = catalog.name)}}">
 				<button class="btn btn-default" id="new-menu-item">
 					<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Add Item
 				</button>
 			</a>
-						<a href="{{url_for('deleteCategory', category_id = category.id )}}">
-				<button class="btn btn-default delete" id="delete-category">
-					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete Category
+						<a href="{{url_for('deleteCatalog', catalog_name = catalog.name)}}">
+				<button class="btn btn-default delete" id="delete-catalog">
+					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete Catalog
 				</button>
 			</a>
 		</div>
@@ -61,8 +61,8 @@
 				<div class="menu-item">
 					<h3>{{i.name}}</h3>
 					<p>{{i.description}}</p>
-					<a href='{{url_for('editItem', category_id = category.id, item_id=i.id ) }}'>Edit</a> | 
-					<a href='{{url_for('deleteItem', category_id = category.id, item_id=i.id ) }}'>Delete</a>
+					<a href='{{url_for('editItem', catalog_name=catalog.name, item_name=i.name)}}'>Edit</a> |
+					<a href='{{url_for('deleteItem', catalog_name=catalog.name, item_name=i.name)}}'>Delete</a>
 					</div>
 			{% endfor %}
         </div>
