--- a/proj_5/templates/catalogs.html
+++ b/proj_5/templates/catalogs.html
@@ -11,7 +11,7 @@
 	<div class="row banner main">
 		<div class="col-md-1"></div>
 		<div class="col-md-11 padding-none">
-			<h1>Categories</h1>
+			<h1>Catalogs</h1>
 		</div>
 	</div>
 
@@ -29,20 +29,20 @@
 	<div class="row padding-top padding-bottom">
 		<div class="col-md-1"></div>
 		<div class="col-md-10 padding-none">
-			<a href="{{url_for('newCategory')}}">
-				<button class="btn btn-default" id="new-category">
-					<span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Add Category
+			<a href="{{url_for('newCatalog')}}">
+				<button class="btn btn-default" id="new-catalog">
+					<span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Add Catalog
 				</button>
 			</a>
 		</div>
 		<div class="col-md-1"></div>
 	</div>
-	{% for category in categories %}
-		<a href = "{{url_for('showCategory', category_id = category.id)}}">
+	{% for catalog in catalogs %}
+		<a href = "{{url_for('showCatalog', catalog_name = catalog.name)}}">
 			<div class="row">
 				<div class="col-md-1"></div>
-					<div class="col-md-10 category-list">
-						<h3>{{category.name}}</h3>
+					<div class="col-md-10 catalog-list">
+						<h3>{{catalog.name}}</h3>
 					</div>
 				<div class="col-md-1"></div>
 			</div>
