--- a/proj_5/templates/editCatalog.html
+++ b/proj_5/templates/editCatalog.html
@@ -6,21 +6,21 @@
 	</div>
 	<div class="row banner menu">
 		<div class="col-md-11 col-md-offset-1 padding-none">
-			<h1>Edit {{category.name}}</h1>
+			<h1>Edit {{catalog.name}}</h1>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-6 col-md-offset-1 padding-top">
-			<form action="{{ url_for('editCategory',category_id = category.id)}}" method = "post">
+			<form action="{{ url_for('editCatalog',catalog_name = catalog.name)}}" method = "post">
 				<div class="form-group">
 					<label for="name">Name:</label>
-					<input type ="text" class="form-control" name="name" value="{{category.name }}">
+					<input type ="text" class="form-control" name="name" value="{{catalog.name}}">
 					<div class="padding-bottom"></div>
 					<button type="submit" class="btn btn-default" id="submit" type="submit">
 					<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Save</button>
 				</div>
 			</form>
-			<a href = '{{url_for('showCategories')}}'>
+			<a href = '{{url_for('showCatalogs')}}'>
 				<button class="btn btn-default delete">
 				<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
 			</a>
