--- a/proj_5/templates/login.html
+++ b/proj_5/templates/login.html
@@ -33,7 +33,7 @@ function signInCallback(authResult) {
           if (result) {
             $('#result').html('Login Successful!</br>' + result + '</br>Redirecting...')
             setTimeout(function(){
-              window.location.href="/category";
+              window.location.href="/catalog";
             }, 4000);
           }else if (authResult['error']){
             console.log('There was an error:' + authResult['error']);
