--- a/proj_5/templates/newCatalog.html
+++ b/proj_5/templates/newCatalog.html
@@ -15,6 +15,12 @@
 				<div class="form-group">
 				<label for="name">Name:</label>
 				<input type ="text" class="form-control" maxlength="100" name="name">
+
+        <br>
+        {% if error_messages!='' %}
+          <div style='color:red;'>{{error_messages}}</div>
+        {% endif %}
+
 				<div class="padding-bottom"></div>
 				<button type="submit" class="btn btn-default" id="submit" type="submit">
 				<span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Create</button>
