--- a/proj_5/templates/catalogs.html
+++ b/proj_5/templates/catalogs.html
@@ -1,19 +1,42 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-	<div class="row top-menu">
-		<div class="col-md-10"></div>
-		<div class="col-md-2 text-right"></div>
-	</div>
-	<div class="row divider blue">
-		<div class="col-md-12"></div>
-	</div>
-	<div class="row banner main">
-		<div class="col-md-1"></div>
-		<div class="col-md-11 padding-none">
-			<h1>Catalogs</h1>
-		</div>
-	</div>
+<div class="row top-menu">
+	<div class="col-md-10"></div>
+	<div class="col-md-2 text-right"></div>
+</div>
+<div class="row divider blue">
+	<div class="col-md-12"></div>
+</div>
+
+<div class="row padding-top padding-bottom">
+	<div class="col-md-1"></div>
+	<div class="col-md-1"></div>
+</div>
+
+<div class="row">
+  <div class="col-md-10">
+    <div class="col-md-3">
+      <h3>Categories</h3>
+      <div><a href="{{url_for('newCatalog')}}">Add Catalog</a></div>
+      {% for catalog in catalogs %}
+		    <a href = "{{url_for('showCatalog', catalog_name = catalog.name)}}">
+			    <div>{{catalog.name}}</div>
+		    </a>
+      {% endfor %}
+    </div>
+
+    <div class="col-md-7">
+      <h3>Items</h3>
+      <div><a href="{{url_for('newCatalog')}}">Add Item</a></div>
+      {% for item in items %}
+        <a href="{{url_for('showItem', catalog_name=item.catalog.name, item_name=item.name)}}">
+          <div>{{item.name}}</div>
+        </a>
+      {% endfor %}
+    </div>
+  </div>
+</div>
 
 <div class = 'flash'>
 	{% with messages = get_flashed_messages() %}
@@ -26,27 +49,5 @@
         {% endif %}
     {% endwith %}
 </div>
-	<div class="row padding-top padding-bottom">
-		<div class="col-md-1"></div>
-		<div class="col-md-10 padding-none">
-			<a href="{{url_for('newCatalog')}}">
-				<button class="btn btn-default" id="new-catalog">
-					<span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Add Catalog
-				</button>
-			</a>
-		</div>
-		<div class="col-md-1"></div>
-	</div>
-	{% for catalog in catalogs %}
-		<a href = "{{url_for('showCatalog', catalog_name = catalog.name)}}">
-			<div class="row">
-				<div class="col-md-1"></div>
-					<div class="col-md-10 catalog-list">
-						<h3>{{catalog.name}}</h3>
-					</div>
-				<div class="col-md-1"></div>
-			</div>
-		</a>
-	{% endfor %}
-</div>
+
 {% endblock %}
