--- a/proj_5/templates/newitem.html
+++ b/proj_5/templates/newitem.html
@@ -22,6 +22,13 @@
 				<label for="description">Description:</label>
 				<textarea class="form-control" maxlength="250" rows="3" name="description" placeholder="Description of the item"></textarea>
 
+        <label>Catalog:</label>
+        <select name="categories">
+          {% for catalog in catalogs %}:
+            <option value="volvo">{{catalog.name}}</option>
+          {% endfor %}
+        </select>
+
         <br>
         {% if error_messages %}
           <div style='color:red;'>{{error_messages}}</div>
