--- a/proj_5/templates/catalog.html
+++ b/proj_5/templates/catalog.html
@@ -1,72 +1,59 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-
-<div class="row divider green">
+<div class="row top-menu">
+	<div class="col-md-10"></div>
+	<div class="col-md-2 text-right"></div>
+</div>
+<div class="row divider blue">
 	<div class="col-md-12"></div>
 </div>
 
-<div class="row banner menu">
-	<div class="col-md-11 col-md-offset-1 padding-none">
-		<h1>{{ catalog.name }}
-		<figure class="creator">
-			<img src="{{ url_for('static', filename='blank_user.gif') }}">
-			<figcaption>Catalog creator's name goes here</figcaption>
-		</figure>
-		</h1>
-	</div>
+<div class="row padding-top padding-bottom">
+	<div class="col-md-1"></div>
+	<div class="col-md-1"></div>
+</div>
+
+<div class="row">
+  <div class="col-md-10">
+    <div class="col-md-3">
+      {% if user_id != None %}
+        <div><a href="{{url_for('newCatalog')}}">Add Catalog</a></div>
+      {% endif %}
+      <h3>Categories</h3>
+      {% for catalog in catalogs %}
+		    <a href = "{{url_for('showCatalog', catalog_name = catalog.name)}}">
+			    <div style='color:red'>{{catalog.name}}</div>
+		    </a>
+      {% endfor %}
+    </div>
+
+    <div class="col-md-7">
+      <!-- Only owner can add new item to category -->
+      {% if user_id != None %}
+         <div><a href="{{url_for('newItem')}}">Add Item</a></div>
+      {% endif %}
+      <h3>{{catalog.name}} Items ({{items|length}} items)</h3>
+      {% for item in items %}
+        <a href="{{url_for('showItem', catalog_name=item.catalog.name, item_name=item.name)}}">
+          <div style='color:red;'>{{item.name}}</div>
+        </a>
+      {% endfor %}
+    </div>
+  </div>
 </div>
 
 <div class = 'flash'>
-  {% with messages = get_flashed_messages() %}
-    {% if messages %}  
-      <ul>
-        {% for message in messages %}
-            <li> <strong> {{ message }} </strong> </li>
-        {% endfor %}
-      </ul>
-    {% endif %}
-  {% endwith %}
+	{% with messages = get_flashed_messages() %}
+		{% if messages %}
+			<ul>
+        	{% for message in messages %}
+            	<li> <strong> {{ message }} </strong> </li>
+        	{% endfor %}
+        	</ul>
+        {% endif %}
+    {% endwith %}
 </div>
-
-</div>
-	<div class="row padding-top padding-bottom">
-		<div class="col-md-1"></div>
-		<div class="col-md-11 padding-none">
-			<a href="{{url_for('editCatalog', catalog_name = catalog.name)}}">
-				<button class="btn btn-default" id="new-menu-item">
-					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit Catalog
-				</button>
-			</a>
-			<a href="{{url_for('newItem', catalog_name = catalog.name)}}">
-				<button class="btn btn-default" id="new-menu-item">
-					<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Add Item
-				</button>
-			</a>
-						<a href="{{url_for('deleteCatalog', catalog_name = catalog.name)}}">
-				<button class="btn btn-default delete" id="delete-catalog">
-					<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete Catalog
-				</button>
-			</a>
-		</div>
-	<div class="col-md-7"></div>
-</div>
-
-{% if items !=[] %}	
-	<div class="row">
-    <div class="col-md-1"></div>
-		<div class="col-md-3">
-			<h2>Items</h2>
-			{% for i in items %}
-				<div class="menu-item">
-					<h3>{{i.name}}</h3>
-					<p>{{i.description}}</p>
-					<a href='{{url_for('editItem', catalog_name=catalog.name, item_name=i.name)}}'>Edit</a> |
-					<a href='{{url_for('deleteItem', catalog_name=catalog.name, item_name=i.name)}}'>Delete</a>
-					</div>
-			{% endfor %}
-        </div>
-	</div>
-{% endif %}
 
 {% endblock %}
+
