--- a/proj_5/templates/newitem.html
+++ b/proj_5/templates/newitem.html
@@ -17,7 +17,7 @@
 			<div class="form-group">
 
 				<label for="name">Name:</label>
-				<input type ="text" maxlength="50" class="form-control" name="name"placeholder="Name of the item">
+				<input type ="text" maxlength="50" class="form-control" name="name" placeholder="Name of the item">
 
 				<label for="description">Description:</label>
 				<textarea class="form-control" maxlength="250" rows="3" name="description" placeholder="Description of the item"></textarea>
@@ -25,7 +25,7 @@
         <label>Catalog:</label>
         <select name="categories">
           {% for catalog in catalogs %}:
-            <option value="volvo">{{catalog.name}}</option>
+            <option value={{catalog.name}}>{{catalog.name}}</option>
           {% endfor %}
         </select>
 
