--- a/proj_5/templates/newCatalog.html
+++ b/proj_5/templates/newCatalog.html
@@ -1,31 +1,32 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-	<div class="row divider green">
-		<div class="col-md-12"></div>
+<div class="row divider green">
+	<div class="col-md-12"></div>
+</div>
+
+<div class="row">
+	<div class="col-md-11">
+		<h2>New Catalog</h2>
 	</div>
-	<div class="row banner menu">
-		<div class="col-md-11 col-md-offset-1 padding-none">
-			<h1>New Catalog</h1>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-6 col-md-offset-1 padding-top">
-			<form action="#" method = "post">
-				<div class="form-group">
-				<label for="name">Name:</label>
-				<input type ="text" class="form-control" maxlength="100" name="name">
+</div>
+
+<div class="row">
+	<div class="col-md-6">
+		<form action="#" method = "post">
+			<div class="form-group">
+			  <label for="name">Name:</label>
+			  <input type ="text" class="form-control" maxlength="100" name="name">
 
         <br>
         {% if error_messages!='' %}
           <div style='color:red;'>{{error_messages}}</div>
         {% endif %}
 
-				<div class="padding-bottom"></div>
-				<button type="submit" class="btn btn-default" id="submit" type="submit">
-				<span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Create</button>
-				</div>
-			</form>
-		</div>
+			  <div class="padding-bottom"></div>
+			  <button type="submit" id="submit">Create</button>
+			</div>
+		</form>
 	</div>
+</div>
 {% endblock %}
