--- a/proj_5/templates/newitem.html
+++ b/proj_5/templates/newitem.html
@@ -5,14 +5,14 @@
 	<div class="col-md-12"></div>
 </div>
 
-<div class="row banner menu">
-	<div class="col-md-11 col-md-offset-1 padding-none">
-		<h1>New Item</h1>
+<div class="row">
+	<div class="col-md-11">
+		<h2>New Item</h2>
 	</div>
 </div>
 
 <div class="row">
-	<div class="col-md-6 col-md-offset-1 padding-top">
+	<div class="col-md-6">
 		<form action="#" method = "post">
 			<div class="form-group">
 
@@ -23,20 +23,21 @@
 				<textarea class="form-control" maxlength="250" rows="3" name="description" placeholder="Description of the item"></textarea>
 
         <label>Catalog:</label>
+        <br>
         <select name="categories">
           {% for catalog in catalogs %}:
             <option value={{catalog.name}}>{{catalog.name}}</option>
           {% endfor %}
         </select>
 
-        <br>
+        <br><br>
         {% if error_messages %}
           <div style='color:red;'>{{error_messages}}</div>
           <br>
         {% endif %}
-
-				<button type="submit" class="btn btn-default" id="submit" type="submit">
-				<span class="glyphicon glyphicon-glass" aria-hidden="true"></span>Create</button>
+        
+        <br>
+        <button>Create</button>
 
 			</div>
 		</form>
