--- a/proj_5/templates/header.html
+++ b/proj_5/templates/header.html
@@ -1,7 +1,7 @@
 <div class="row top-menu">
 	<div class="col-md-6">
 		<a href="{{url_for('showCatalogs')}}">
-			<span class="glyphicon glyphicon-home" aria-hidden="true"></span>Show All Categories
+			<span class="glyphicon glyphicon-home" aria-hidden="true"></span>Home
 		</a>
 	</div>
 	<div class="col-md-6 text-right">
@@ -9,7 +9,6 @@
       <a href="{{url_for('showLogin')}}">Login</a>
     {% else %}
     <a href="{{url_for('gdisconnect')}}">Logout</a>
-    <div>{{user_id}}</div>
     {% endif %}
 	</div>
 </div>
