--- a/proj_5/templates/deleteitem.html
+++ b/proj_5/templates/deleteitem.html
@@ -2,10 +2,16 @@
 {% block content %}
 {% include "header.html" %}
 
-<h2> Are you sure you want to delete {{item.name}}? </h2>
+<div class="row">
+	<div class="col-md-11">
+		<h2>Delete Item</h2>
+	</div>
+</div>
+
+<h3> Are you sure you want to delete {{item.name}}? </h3>
 <br>
-<form action="#" method = 'post' class="col-md-1">
-	<button>Delete</button>
+<form method='POST'>
+  <input type="submit"></input>
 </form>
 
 {% endblock %}
