fix bug: confirm editing a item didn't work

--- a/proj_5/templates/edititem.html
+++ b/proj_5/templates/edititem.html
@@ -17,16 +17,15 @@
 
 				<label for="description">Description:</label>
         <textarea class="form-control" maxlength="250" rows="3" name="description">{{item.description}}</textarea>
-				<br>
+        
+        <br>
+        <div>
+          <input type="submit"></input>
+        </div>
+
 			</div>
 		</form>
 	</div>
-</div>
-
-<div class="row">
-  <div class="col-md-11">
-    <input type="submit"></input>
-</div>
 </div>
 
 {% endblock %}
