give every itme a pic

--- a/proj_5/templates/newitem.html
+++ b/proj_5/templates/newitem.html
@@ -17,7 +17,10 @@
 				<input type ="text" maxlength="50" class="form-control" name="name" placeholder="Name of the item">
 
 				<label for="description">Description:</label>
-				<textarea class="form-control" maxlength="250" rows="3" name="description" placeholder="Description of the item"></textarea>
+				<textarea class="form-control" maxlength="250" rows="5" name="description" placeholder="Description of the item"></textarea>
+
+        <label for="image">Image:</label>
+				<textarea class="form-control" maxlength="250" rows="3" name="image" placeholder="Image url of the item"></textarea>
 
         <label>Catalog:</label>
         <br>
