--- a/proj_5/templates/edititem.html
+++ b/proj_5/templates/edititem.html
@@ -12,11 +12,15 @@
 	<div class="col-md-6">
 		<form action="#" method = "post">
 			<div class="form-group">
+
 				<label for="name">Name:</label>
 				<input type ="text" maxlength="100" class="form-control" name="name" value="{{item.name}}">
 
 				<label for="description">Description:</label>
-        <textarea class="form-control" maxlength="250" rows="3" name="description">{{item.description}}</textarea>
+        <textarea class="form-control" maxlength="250" rows="5" name="description">{{item.description}}</textarea>
+
+        <label for="image">Image:</label>
+        <textarea class="form-control" maxlength="250" rows="3" name="image">{{item.image}}</textarea>
         
         <br>
         <div>
