--- a/proj_5/templates/item.html
+++ b/proj_5/templates/item.html
@@ -4,12 +4,16 @@
 
 <div class="row">
   <div class="col-md-12">
-    <h3>{{item.name}}</h3>
+    <h2>{{item.name}}</h2>
   </div>
 </div>
 <div class="row"> 
-  <div class="col-md-12">
-    {{item.description}}
+  <div class="col-md-11">
+    <p>
+      <img src={{item.image}} width="200" height="200" align='right'>
+      {{item.description}}
+    </p>
+
   </div>
 </div>
 
