now users can not edit or delete items not belong to them, even by typing url

--- a/proj_5/templates/item.html
+++ b/proj_5/templates/item.html
@@ -19,11 +19,17 @@
 
 <br>
 <!-- The owner can delete or edit the item -->
-{% if user_id == item.user.id %}
+{% if user_id == item.user_id %}
  <div>
    <a style='color:red;' href='{{url_for('editItem', catalog_name=item.catalog.name, item_name=item.name)}}'>Edit</a> |
    <a style='color:red;' href='{{url_for('deleteItem', catalog_name=item.catalog.name, item_name=item.name)}}'>Delete</a>
  </div>
 {% endif %}
+
+
+{% if error_messages %}
+  <div>{{error_messages}}</div>
+{% endif %}
+
 
 {% endblock %}
