proj_5: fix bug: 'login' turns out to be 'logout' in login page

--- a/proj_5/templates/header.html
+++ b/proj_5/templates/header.html
@@ -5,7 +5,7 @@
 		</a>
 	</div>
 	<div class="col-md-6 text-right">
-    {% if user_id == None %}
+    {% if 'user_name' not in session %}
       <a href="{{url_for('showLogin')}}">Login</a>
     {% else %}
       <a href="{{url_for('gdisconnect')}}">Logout</a>
