--- a/proj_6/static/style.css
+++ b/proj_6/static/style.css
@@ -11,72 +11,46 @@ body {
     position: relative;
 }
 
-input {
-    font-size: 12px;
+li {
+    list-style: none;
+    margin-top: 10px;
 }
 
-h1 {
-    color: #525454;
-    font-size: 22px;
-    margin: 0 0 10px 0;
-    text-align: center;
-}
-
-#hide-listings,
-#show-listings {
-    width: 48%;
-}
-
-hr {
-    background: #D0D7D9;
-    height: 1px;
-    margin: 20px 0 20px 0;
-    border: none;
+ul {
+    padding: 0px;
 }
 
 .options-box {
     background: #fff;
-    border: 1px solid #999;
-    border-radius: 3px;
     height: 100%;
-    line-height: 35px;
-    padding: 10px 10px 30px 10px;
+    padding: 0px 0px 0px 10px;
     text-align: left;
-    width: 362px;
+    width: 300px;
 }
 
-#pano {
-    width: 200px;
-    height: 200px;
+
+#menu {
+    height:30px;
+    top: 10px;
+    bottom: 10px;
+    left: 10px;
+    position: absolute;
 }
 
-#places-search,
-#search-within-time-text {
-    width: 84%;
-}
-
-.text {
-    font-size: 12px;
-}
-
-#toggle-drawing {
-    width: 27%;
-    position: relative;
-    margin-left: 10px;
-}
-
-#zoom-to-area-text {
-    width: 70%;
-}
-
-#zoom-to-area {
-    width: 24%;
-}
+#menuBar {  
+    top:0px;
+    height: 50px;
+    left: 320px;
+    position: absolute;
+    right: 0px;
+    background:#000;
+    z-index:2;  
+} 
 
 #map{  
+    top: 50px;
     bottom:0px;
-    height: 100%;
-    left: 362px;
+    left: 320px;
     position: absolute;
     right: 0px;
 
