--- a/proj_6/static/style.css
+++ b/proj_6/static/style.css
@@ -6,10 +6,6 @@ body {
     padding: 0;
 }
 
-.container {
-    height: 100%;
-    position: relative;
-}
 
 li {
     list-style: none;
@@ -22,36 +18,35 @@ ul {
 
 .options-box {
     background: #fff;
-    height: 100%;
-    padding: 0px 0px 0px 10px;
+    top: 0px;
+    bottom: 0px;
+    padding-left: 10px;
     text-align: left;
     width: 300px;
+    position: absolute;
 }
 
 #menu {
     height:30px;
     top: 10px;
     bottom: 10px;
-    left: 10px;
+    left: 20px;
     position: absolute;
 }
 
 #menuBar {  
     top:0px;
     height: 50px;
-    left: 320px;
+    left: 310px;
     position: absolute;
     right: 0px;
     background:#000;
-    z-index:2;  
 } 
 
 #map{  
     top: 50px;
     bottom:0px;
-    left: 320px;
+    left: 310px;
     position: absolute;
     right: 0px;
-
-    z-index:2;  
 }  
